@@ -361,6 +361,16 @@ integer multilenbuffchar(integer c)
     return 0;
 }
 
+void init_kanji (const_string file_str, const_string internal_str)
+{
+    if (!set_enc_string (file_str, internal_str)) {
+        fprintf (stderr, "Bad kanji encoding \"%s\" or \"%s\".\n",
+                 file_str ? file_str  : "NULL",
+                 internal_str ? internal_str : "NULL");
+        uexit(1);
+    }
+}
+
 void init_default_kanji (const_string file_str, const_string internal_str)
 {
     char *p;
@@ -382,10 +392,5 @@ void init_default_kanji (const_string file_str, const_string internal_str)
     }
 #endif
 
-    if (!set_enc_string (file_str, internal_str)) {
-        fprintf (stderr, "Bad kanji encoding \"%s\" or \"%s\".\n",
-                 file_str ? file_str  : "NULL",
-                 internal_str ? internal_str : "NULL");
-        uexit(1);
-    }
+    init_kanji (file_str, internal_str);
 }
