@@ -37,6 +37,7 @@ extern integer calc_pos (integer c);
 extern integer kcatcodekey (integer c);
 extern integer multilenbuffchar (integer c);
 
+extern void init_kanji (const_string file_str, const_string internal_str);
 extern void init_default_kanji (const_string file_str, const_string internal_str);
 /* for upTeX and e-upTeX */
 #define initdefaultkanji() init_default_kanji("utf8", "uptex")
@@ -56,5 +57,10 @@ extern void init_default_kanji (const_string file_str, const_string internal_str
 #else
 #define inputline2(fp,buff,pos,size) input_line2(fp,buff,pos,size,NULL)
 #endif
+
+extern void dump_kanji (FILE *fp);
+extern void undump_kanji (FILE *fp);
+#define dumpkanji dump_kanji
+#define undumpkanji undump_kanji
 
 #endif /* not KANJI_H */
